# ArmStone

./: .gitignore  .gitmodules  LICENSE  README.md
.docker/: Dockerfile
armstone/: CMakeLists.txt  package.xml
as_base_localisation/: package.xml
as_bringup/: CMakeLists.txt  package.xml
as_bringup/launch/: _as_stack.launch  as1.launch  as2.launch  as_arm_test.launch  as_gazebo.launch  as_sim.launch  as_stack.launch  sim.launch  test_arm.launch
as_control/as_base_control/: CMakeLists.txt  package.xml
as_control/as_control/: CMakeLists.txt  package.xml
as_control/as_control/config/: base_controllers.yaml  control.differential_drive.yaml  control.group_velocity.yaml  control.mecanum_drive.yaml  hw.interfaces.yaml  joint_limits.yaml  twist_mux.yaml  xarm_controllers.yaml
as_control/as_control/launch/: as_control_stack.launch  as_driver.launch
as_control/as_control/launch/archive/: test_vesc_hw_interface.launch
as_control/as_control/src/: armstone_hw_interface_node.cpp
as_control/as_driver/: CMakeLists.txt  package.xml
as_control/as_extruder_control/: CMakeLists.txt  package.xml
as_control/as_linear_controller/: CMakeLists.txt  package.xml
as_control/as_robot_control/: CMakeLists.txt  package.xml
as_control/as_robot_control/config/: example_control.yaml  example_hw_interface.yaml
as_control/as_robot_control/launch/: differential_drive.launch
as_description/: CMakeLists.txt  package.xml
as_description/launch/: basearm_display.launch  display_as.launch  display_as_base.launch  load_description_as.launch  load_description_as_base.launch  test_base_only.launch
as_description/meshes/: battery.dae  battery.stl  cam_holder.dae  chasis.dae  chasis.stl  clay_assembly.dae  clay_assembly.stl  compressor_assembly.dae  compressor_assembly.stl  cover_assembly.dae  cover_assembly.stl  cover_assembly_.dae  cover_assembly_.stl  dcbox.dae  dcbox.stl  extruder.dae  extruder.stl  extruder_axes.dae  extruder_collision.dae  extruder_collision.stl  hokuyo.dae  hokuyo.stl  intermediate_assembly.dae  intermediate_assembly.stl  motor.dae  motor.stl  motor_assembly.stl  mounting_plate.stl
as_description/robcogen/: armstone.dtdsl  as.generated.urdf  asArm.dtdsl  asArm.generated.urdf  asArm.kindsl  asArm.xacro  readme.md
as_description/robots/: as.generated.stl.urdf  as.generated.urdf  as.xacro  as_arm.generated.urdf  as_base.urdf.xacro  as_base.xacro  base_only.xacro  basearm.xacro
as_description/rviz/: as.rviz  kinematic_sim.rviz
as_drivers/as_drivers/: CMakeLists.txt  package.xml
as_drivers/as_drivers/config/: hw.armstone.yaml
as_drivers/as_drivers/launch/: as_driver.launch
as_drivers/as_drivers/src/: armstone_hw_interface_node.cpp
as_drivers/vesc/: README.md
as_ee_localisation/: package.xml
as_ee_localisation/launch/: bringup_realsense.launch  bringup_realsense_l515.launch
as_gazebo/: CMakeLists.txt  package.xml
as_gazebo/launch/: as_gazebo.launch  as_gazebo_empty.launch
as_gazebo/worlds/: construction.world  empty.world  slam_test.world
as_localisation/as_base_localisation/: CMakeLists.txt
as_localisation/as_ee_localisation/: CMakeLists.txt  readme.md
as_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
as_moveit_config/config/: armstone.srdf  asbasearm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
as_moveit_config/launch/: armstone_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
as_sensors/as_sensors/: CMakeLists.txt  package.xml
as_ui/: CMakeLists.txt  package.xml
as_ui/config/: misc.joystick.yaml
as_ui/launch/: load_joy_stack.launch
ascontrol/: CMakeLists.txt  package.xml
asdesc/: CMakeLists.txt  package.xml
asgazebo/: CMakeLists.txt  package.xml
hardware/: readme.md
(+200 files in other folders)
