<?xml version="1.0"?>
<package format="2">
  <name>rr_locomotion</name>
  <version>0.0.0</version>
  <description>The rr_locomotion package</description>

  <maintainer email="RossRobotics@todo.todo">RossRobotics</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>joint_state_aggregator</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>
  <depend>vel_mux</depend>
  <depend>ros_control_boilerplate</depend>

  <export>

  </export>
</package>
